# scip

./: Makefile
check/: check_cluster.sh  configuration_logfiles.sh  configuration_tmpfile_setup_scip.sh  run.sh
check/coverage/settings/: ws_branch_gen_disj.set
examples/: CMakeLists.txt
examples/GenDisj/: CMakeLists.txt  INSTALL.md  Makefile
examples/GenDisj/doc/: xternal_scipgendisj.c
examples/GenDisj/src/: cmain.c
make/: make.project
make/local/: make.targets
src/: CMakeLists.txt
src/scip/: branch_relpscost.c  branch_vanillafullstrong.c  nodesel.c  nodesel_vanillabfs.c  nodesel_vanillabfs.h  presol_donotmultaggr.c  presol_donotmultaggr.h  presol_milp.cpp  scip_prob.c  scipdefplugins.c  scipdefplugins.h  scipshell.c  set.c  struct_set.h  struct_tree.h  struct_visual.h  tree.c  tree.h  visual.c  visual.h
